// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Button Basic neutral button 1`] = `
<button
  className=""
  color="neutral"
  disabled={false}
  role="button"
  size="md"
>
  neutral
</button>
`;

exports[`Render Button Basic neutral button dark 1`] = `
<button
  className=""
  color="neutral"
  disabled={false}
  role="button"
  size="md"
>
  neutral
</button>
`;

exports[`Render Button Button with icon and text 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={false}
    size="md"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable={false}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </i>
  Settings
</button>
`;

exports[`Render Button Button with icon and text dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={false}
    size="md"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      focusable={false}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </i>
  Settings
</button>
`;

exports[`Render Button Filled button 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  primary
</button>
`;

exports[`Render Button Filled button dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  primary
</button>
`;

exports[`Render Button Filled disabled button 1`] = `
<button
  className=""
  color="info"
  disabled={true}
  role="button"
  size="md"
>
  info
</button>
`;

exports[`Render Button Filled disabled button dark 1`] = `
<button
  className=""
  color="info"
  disabled={true}
  role="button"
  size="md"
>
  info
</button>
`;

exports[`Render Button Filled loading button 1`] = `
<button
  className=""
  color="major"
  disabled={true}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={true}
    size="md"
  >
    <svg
      enableBackground="new 0 0 0 0"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xlinkHref="http://www.w3.org/1999/xlink"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M73,50c0-12.7-10.3-23-23-23S27,37.3,27,50 M30.9,50c0-10.5,8.5-19.1,19.1-19.1S69.1,39.5,69.1,50"
        fill="currentColor"
      >
        <animateTransform
          attributeName="transform"
          attributeType="XML"
          dur="1s"
          from="0 50 50"
          repeatCount="indefinite"
          to="360 50 50"
          type="rotate"
        />
      </path>
    </svg>
  </i>
  primary
</button>
`;

exports[`Render Button Filled loading button dark 1`] = `
<button
  className=""
  color="major"
  disabled={true}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={true}
    size="md"
  >
    <svg
      enableBackground="new 0 0 0 0"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xlinkHref="http://www.w3.org/1999/xlink"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M73,50c0-12.7-10.3-23-23-23S27,37.3,27,50 M30.9,50c0-10.5,8.5-19.1,19.1-19.1S69.1,39.5,69.1,50"
        fill="currentColor"
      >
        <animateTransform
          attributeName="transform"
          attributeType="XML"
          dur="1s"
          from="0 50 50"
          repeatCount="indefinite"
          to="360 50 50"
          type="rotate"
        />
      </path>
    </svg>
  </i>
  primary
</button>
`;

exports[`Render Button Filled uppercase button 1`] = `
<button
  className=""
  color="danger"
  disabled={false}
  role="button"
  size="md"
>
  danger
</button>
`;

exports[`Render Button Filled uppercase button dark 1`] = `
<button
  className=""
  color="danger"
  disabled={false}
  role="button"
  size="md"
>
  danger
</button>
`;

exports[`Render Button Hero button 1`] = `
<button
  className=""
  color="minor"
  disabled={false}
  role="button"
  size="md"
>
  hero
</button>
`;

exports[`Render Button Hero button dark 1`] = `
<button
  className=""
  color="minor"
  disabled={false}
  role="button"
  size="md"
>
  hero
</button>
`;

exports[`Render Button Hero neutral button 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  hero
</button>
`;

exports[`Render Button Hero neutral button dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  hero
</button>
`;

exports[`Render Button Neutral button 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  neutral
</button>
`;

exports[`Render Button Neutral button dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  neutral
</button>
`;

exports[`Render Button Only icon button 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={false}
    size="md"
  >
    <svg
      enableBackground="new 0 0 0 0"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xlinkHref="http://www.w3.org/1999/xlink"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M73,50c0-12.7-10.3-23-23-23S27,37.3,27,50 M30.9,50c0-10.5,8.5-19.1,19.1-19.1S69.1,39.5,69.1,50"
        fill="currentColor"
      >
        <animateTransform
          attributeName="transform"
          attributeType="XML"
          dur="1s"
          from="0 50 50"
          repeatCount="indefinite"
          to="360 50 50"
          type="rotate"
        />
      </path>
    </svg>
  </i>
  
</button>
`;

exports[`Render Button Only icon button dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  <i
    className=""
    color="major"
    loading={false}
    size="md"
  >
    <svg
      enableBackground="new 0 0 0 0"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xlinkHref="http://www.w3.org/1999/xlink"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M73,50c0-12.7-10.3-23-23-23S27,37.3,27,50 M30.9,50c0-10.5,8.5-19.1,19.1-19.1S69.1,39.5,69.1,50"
        fill="currentColor"
      >
        <animateTransform
          attributeName="transform"
          attributeType="XML"
          dur="1s"
          from="0 50 50"
          repeatCount="indefinite"
          to="360 50 50"
          type="rotate"
        />
      </path>
    </svg>
  </i>
  
</button>
`;

exports[`Render Button Outlined button 1`] = `
<button
  className=""
  color="minor"
  disabled={false}
  role="button"
  size="md"
>
  secondary
</button>
`;

exports[`Render Button Outlined button dark 1`] = `
<button
  className=""
  color="minor"
  disabled={false}
  role="button"
  size="md"
>
  secondary
</button>
`;

exports[`Render Button Outlined full width button 1`] = `
<button
  className=""
  color="warning"
  disabled={false}
  role="button"
  size="md"
>
  warning
</button>
`;

exports[`Render Button Outlined full width button dark 1`] = `
<button
  className=""
  color="warning"
  disabled={false}
  role="button"
  size="md"
>
  warning
</button>
`;

exports[`Render Button Outlined neutral button 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  secondary
</button>
`;

exports[`Render Button Outlined neutral button dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  secondary
</button>
`;

exports[`Render Button Renders with no styles 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  
</button>
`;

exports[`Render Button Renders with no styles dark 1`] = `
<button
  className=""
  color="major"
  disabled={false}
  role="button"
  size="md"
>
  
</button>
`;
